# sylpheed-prefs-filter

./: .gitignore  .travis.yml  Makefile.am  NEWS  README.md  configure.ac
src/: Makefile.am  prefs_filter.c  prefs_filter.h  prefs_filter_util.c  prefs_filter_util.h
